plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.3'
}

group 'com.intellij'
version '2.10.10.192'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}


dependencies {
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.5'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.5'
    compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
    // https://mvnrepository.com/artifact/org.projectlombok/lombok
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
    testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}


tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}



sourceSets {
    main {
        java.srcDirs 'src','gen'
        resources.srcDir 'resources'
    }

    test {
        java.srcDir 'test/src'
        resources.srcDir 'test/resources'
    }

}

intellij {
    // full list of IntelliJ IDEA releases at https://www.jetbrains.com/intellij-repository/releases
    // full list of IntelliJ IDEA EAP releases at https://www.jetbrains.com/intellij-repository/snapshots
    version 'IU-192.6817.14'
    //version '2018.2.2'
    sandboxDirectory project.rootDir.canonicalPath + "/.sandbox"
    plugins 'java',
            'PythonCore:2019.2.192.6817.14',
            'Kotlin',
            'org.intellij.scala:2019.2.36',
            'JavaScriptLanguage',
            'CSS',
            'Dart:192.7402',
            'Groovy',
            'properties',
            'org.jetbrains.plugins.ruby:2019.2.20190917',
            'com.jetbrains.php:192.6817.20',
            'java-i18n',
            'DatabaseTools',
            'org.jetbrains.plugins.go:192.6603.23.335'
    updateSinceUntilBuild true

//    plugins = ["PythonCore:2018.2.182.3684.101"]
}

publishPlugin {
    token findProperty('intellijPublishToken')
}
